Create compatibility materials have been added.

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -153,5 +153,9 @@
   "item.forgero.sythian": "Sythian",
   "item.forgero.white_mangrove": "White Mangrove",
   "item.forgero.witch_hazel": "Witch Hazel",
-  "item.forgero.zelkova": "Zelkova"
+  "item.forgero.zelkova": "Zelkova",
+  "item.forgero.polished_rose_quartz": "Polished Rose Quartz",
+  "item.forgero.andesite_alloy": "Andesite Alloy",
+  "item.forgero.zinc": "Zinc",
+  "item.forgero.brass": "Brass"
 }
