--- a/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -98,6 +98,10 @@
   "item.forgero.titanium_gold": "Titanium Gold",
   "item.forgero.constantan": "Constantan",
   "item.forgero.therrassium": "Therrassium",
+  "item.forgero.polished_rose_quartz": "Polished Rose Quartz",
+  "item.forgero.andesite_alloy": "Andesite Alloy",
+  "item.forgero.zinc": "Zinc",
+  "item.forgero.brass": "Brass",
   "feature.forgero.golden.title": "Golden",
   "feature.forgero.undying_revival.title": "Totem of undying",
   "feature.forgero.undying_revival.description": "Gives a one time escape from death",
