Added all materials only some balancing left

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -153,5 +153,10 @@
   "item.forgero.sythian": "Sythian",
   "item.forgero.white_mangrove": "White Mangrove",
   "item.forgero.witch_hazel": "Witch Hazel",
-  "item.forgero.zelkova": "Zelkova"
+  "item.forgero.zelkova": "Zelkova",
+  "item.forgero.bear_fur": "Bear Fur",
+  "item.forgero.cattail_fluff": "Cattail Fluff",
+  "item.forgero.glow_goop": "Glow Goop",
+  "item.forgero.shellstone": "Shellstone",
+  "item.forgero.snail_shell": "Snail Shell"
 }
