Empty JSONs added, en_us.json updated.

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -153,5 +153,33 @@
   "item.forgero.sythian": "Sythian",
   "item.forgero.white_mangrove": "White Mangrove",
   "item.forgero.witch_hazel": "Witch Hazel",
-  "item.forgero.zelkova": "Zelkova"
+  "item.forgero.zelkova": "Zelkova",
+  "item.forgero.alpha": "Alpha",
+  "item.forgero.blackwood": "Blackwood",
+  "item.forgero.brimwood": "Brimwood",
+  "item.forgero.cobalt": "Cobalt",
+  "item.forgero.dead": "Dead",
+  "item.forgero.eucalyptus": "Eucalyptus",
+  "item.forgero.joshua": "Joshua",
+  "item.forgero.kapok": "Kapok",
+  "item.forgero.larch": "Larch",
+  "item.forgero.magnolia": "Magnolia",
+  "item.forgero.maple": "Maple",
+  "item.forgero.mauve": "Mauve",
+  "item.forgero.socotra": "Socotra",
+  "item.forgero.chalk": "Chalk",
+  "item.forgero.argillite": "Argillite",
+  "item.forgero.cobalt_obsidian": "Cobalt Obsidian",
+  "item.forgero.prismarite_cluster": "Prismarite Cluster",
+  "item.forgero.large_prismarite_cluster": "Large Prismarite Cluster",
+  "item.forgero.hanging_prismarite": "Hanging Prismarite",
+  "item.forgero.blue_bioshroom": "Blue Bioshroom",
+  "item.forgero.green_bioshroom": "Green Bioshroom",
+  "item.forgero.pink_bioshroom": "Pink Bioshroom",
+  "item.forgero.yellow_bioshroom": "Yellow Bioshroom",
+  "item.forgero.dusktrap": "Dusktrap",
+  "item.forgero.flowering_lily_pad": "Flowering Lily Pad",
+  "item.forgero.kapok_vines": "Kapok Vines",
+  "item.forgero.spanish_moss": "Spanish Moss",
+  "item.forgero.glistering_ivy": "Glistering Ivy"
 }
