Added remaining stones

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -157,5 +157,12 @@
   "item.forgero.polished_rose_quartz": "Polished Rose Quartz",
   "item.forgero.andesite_alloy": "Andesite Alloy",
   "item.forgero.zinc": "Zinc",
-  "item.forgero.brass": "Brass"
+  "item.forgero.brass": "Brass",
+  "item.forgero.asurine": "Asurine",
+  "item.forgero.crimsite": "Crimsite",
+  "item.forgero.limestone": "Limestone",
+  "item.forgero.ochrum": "Ochrum",
+  "item.forgero.scorchia": "Scorchia",
+  "item.forgero.scoria": "Scoria",
+  "item.forgero.veridium": "Veridium"
 }
