Regions Unexplored compat added. Most of it.

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -174,9 +174,13 @@
   "item.forgero.large_prismarite_cluster": "Large Prismarite Cluster",
   "item.forgero.hanging_prismarite": "Hanging Prismarite",
   "item.forgero.blue_bioshroom": "Blue Bioshroom",
+  "item.forgero.blue_bioshroom_stem": "Blue Bioshroom",
   "item.forgero.green_bioshroom": "Green Bioshroom",
+  "item.forgero.green_bioshroom_stem": "Green Bioshroom",
   "item.forgero.pink_bioshroom": "Pink Bioshroom",
+  "item.forgero.pink_bioshroom_stem": "Pink Bioshroom",
   "item.forgero.yellow_bioshroom": "Yellow Bioshroom",
+  "item.forgero.yellow_bioshroom_stem": "Yellow Bioshroom",
   "item.forgero.dusktrap": "Dusktrap",
   "item.forgero.flowering_lily_pad": "Flowering Lily Pad",
   "item.forgero.kapok_vines": "Kapok Vines",
