Deeper And Darker compatibility added. + Blaze Rod fixed.

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -162,6 +162,7 @@
   "item.forgero.reinforced_echo_shard": "Reinforced Echo Shard",
   "item.forgero.sculk_bone": "Sculk Bone",
   "item.forgero.sculk_stone": "Sculk Stone",
+  "item.forgero.sculk_tendrils": "Sculk Tendrils",
   "item.forgero.sculk_vines": "Sculk Vines",
   "item.forgero.soul_crystal": "Soul Crystal",
   "item.forgero.soul_dust": "Soul Dust",
