Ecologics Compatibility added.

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -153,5 +153,10 @@
   "item.forgero.sythian": "Sythian",
   "item.forgero.white_mangrove": "White Mangrove",
   "item.forgero.witch_hazel": "Witch Hazel",
-  "item.forgero.zelkova": "Zelkova"
+  "item.forgero.zelkova": "Zelkova",
+  "item.forgero.coconut": "Coconut",
+  "item.forgero.walnut": "Walnut",
+  "item.forgero.azalea": "Azalea",
+  "item.forgero.flowering_azalea": "Flowering Azalea",
+  "item.forgero.seashell": "Seashell"
 }
