--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -153,5 +153,45 @@
   "item.forgero.sythian": "Sythian",
   "item.forgero.white_mangrove": "White Mangrove",
   "item.forgero.witch_hazel": "Witch Hazel",
-  "item.forgero.zelkova": "Zelkova"
+  "item.forgero.zelkova": "Zelkova",
+  "item.forgero.aurora_crystal_shards": "Aurora Crystal Shards",
+  "item.forgero.ender_shard": "Ender Shard",
+  "item.forgero.eternal_crystal": "Eternal Crystal",
+  "item.forgero.smaragdant_crystal_shard": "Smaragdant Crystal Shard",
+  "item.forgero.sulphur_crystal": "Sulphur Crystal",
+  "item.forgero.ender_dust": "Ender Dust",
+  "item.forgero.gelatine": "Gelatine",
+  "item.forgero.raw_chorus_mushroom": "Chorus Mushroom",
+  "item.forgero.enchanted_phantom_membrane": "Enchanted Phantom Membrane",
+  "item.forgero.leather_stripe": "Leather Stripe",
+  "item.forgero.aeternium": "Aeternium",
+  "item.forgero.thallasium": "Thallasium",
+  "item.forgero.terminite": "Terminite",
+  "item.forgero.amber_gem": "Amber Gem",
+  "item.forgero.bulb_vine": "Bulb Vine",
+  "item.forgero.dense_vine": "Dense Vine",
+  "item.forgero.filalux": "Filalux",
+  "item.forgero.jungle_vine": "Jungle Vine",
+  "item.forgero.magnula": "Magnula",
+  "item.forgero.rubinea": "Rubinea",
+  "item.forgero.twisted_vine": "Twisted Vine",
+  "item.forgero.azure_jadestone": "Azure Jadestone",
+  "item.forgero.brimstone": "Brimstone",
+  "item.forgero.flavolite": "Flavolite",
+  "item.forgero.sandy_jadestone": "Sandy Jadestone",
+  "item.forgero.sulphuric_rock": "Sulphuric Rock",
+  "item.forgero.umbralith": "Umbralith",
+  "item.forgero.violecite": "Violecite",
+  "item.forgero.virid_jadestone": "Virid Jadestone",
+  "item.forgero.silk_fiber": "Silk Fiber",
+  "item.forgero.dragon_tree": "Dragon Tree",
+  "item.forgero.end_lotus": "Endlotus",
+  "item.forgero.helix_tree": "Helix Tree",
+  "item.forgero.jellyshroom": "Jellyshroom",
+  "item.forgero.lacugrove": "Lacugrove",
+  "item.forgero.lucernia": "Lucernia",
+  "item.forgero.mossy_glowshroom": "Mossy Glowshroom",
+  "item.forgero.pythadendron": "Pythadendron",
+  "item.forgero.tenanea": "Tenanea",
+  "item.forgero.umbrella_tree": "Umbrella Tree"
 }
