Renamed echo_planks to eco... Fingers Crossed.

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -156,7 +156,7 @@
   "item.forgero.zelkova": "Zelkova",
   "item.forgero.cobbled_gloomslate": "Cobbled Gloomslate",
   "item.forgero.cobbled_sculk_stone": "Cobbled Sculk Stone",
-  "item.forgero.echo_planks": "Echo Planks",
+  "item.forgero.eco": "Echo Planks",
   "item.forgero.gloomslate": "Gloomslate",
   "item.forgero.grime_ball": "Grime Ball",
   "item.forgero.reinforced_echo_shard": "Reinforced Echo Shard",
