--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -161,7 +161,9 @@
   "item.forgero.sulphur_crystal": "Sulphur Crystal",
   "item.forgero.ender_dust": "Ender Dust",
   "item.forgero.gelatine": "Gelatine",
+  "item.forgero.bolux_mushroom": "Bolux Mushroom",
   "item.forgero.raw_chorus_mushroom": "Chorus Mushroom",
+  "item.forgero.small_amaranita_mushroom": "Small Amaranita Mushroom",
   "item.forgero.enchanted_phantom_membrane": "Enchanted Phantom Membrane",
   "item.forgero.leather_stripe": "Leather Stripe",
   "item.forgero.aeternium": "Aeternium",
