6 materials added for BetterEnd.

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -195,5 +195,11 @@
   "item.forgero.mossy_glowshroom": "Mossy Glowshroom",
   "item.forgero.pythadendron": "Pythadendron",
   "item.forgero.tenanea": "Tenanea",
-  "item.forgero.umbrella_tree": "Umbrella Tree"
+  "item.forgero.umbrella_tree": "Umbrella Tree",
+  "item.forgero.hydralux_petal": "Hydralux Petal",
+  "item.forgero.enchanted_petal": "Enchanted Petal",
+  "item.forgero.glowing_bulb": "Glowing Bulb",
+  "item.forgero.lumecorn_rod": "Lumecorn Rod",
+  "item.forgero.silk_moth_matrix": "Silk Moth Matrix",
+  "item.forgero.small_jellyshroom": "Small Jellyshroom"
 }
