First edition of schematics, landing and getting started category is done

--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -178,72 +178,84 @@
   "attribute.name.generic.mining_speed": "Mining Speed",
   "attribute.name.generic.mining_level": "Mining Level",
   "attribute.name.generic.durability": "Durability",
-  "book.forgero.guidebook.category.landing": "About",
-  "book.forgero.guidebook.landing.about_this_mod.name": "About the mod",
-  "book.forgero.guidebook.landing.about_this_mod.text": "This handbook aims to help you get started with Forgero. It gives you the basics to create your own tool, use & create schematics and gives you insight in how to upgrade/modify your tool. Do keep in mind that we are still actively developing this mod, that means that everything is WIP",
+  "book.forgero.guidebook.name": "Artifica",
+  "book.forgero.guidebook.tooltip": "A Guide to Modular Mayhem",
+  "book.forgero.guidebook.category.landing.name": "About",
+  "book.forgero.guidebook.landing.about_this_mod.name": "About Us",
+  "book.forgero.guidebook.landing.about_this_mod.text": "The Artifica aims to help you on your playthrough with Forgero. It gives you the basics to create your own tool, use & create schematics and gives you insights in how to upgrade/modify your tool. Keep in mind everything is WIP.",
   "book.forgero.guidebook.landing.about_this_mod.title": "About",
   "book.forgero.guidebook.landing.about_this_mod.text1": "If you run into trouble, find bugs, wanna help develop or just want to ask some questions, please join our [Discord!](https://discord.gg/3vK7ZwEDex)",
   "book.forgero.guidebook.landing.about_this_mod.title1": "Discord",
-  "book.forgero.guidebook.category.getting_started": "Getting started",
-  "book.forgero.guidebook.getting_started.intro.name": "Welcome to the world of Forgero!",
-  "book.forgero.guidebook.getting_started.intro.text": "Hello future blacksmith! The world of Forgero is one of exploration, gathering, crafting and tinkering. Every material you collect and every schematic you find matters! So don't just get rid of those wooden tools, stacks of cobblestone and mushrooms!",
-  "book.forgero.guidebook.getting_started.intro.text1": "To get the best experience out of Forgero experiment as much as possible. But keep in mind, with so many possibilities the learning curve is pretty steep. You don't become a master blacksmith in one day. *Please follow this handbook closely and when done with it keep it in you stash!*",
-  "book.forgero.guidebook.getting_started.intro.title": "Welcome To Forgero",
+  "book.forgero.guidebook.category.getting_started.name": "Getting started",
+  "book.forgero.guidebook.getting_started.intro.name": "World of Forgero",
+  "book.forgero.guidebook.getting_started.intro.text": "Hello Future Blacksmith! The world of Forgero is one of exploration, gathering and crafting. Where actually collecting every material is usefull.",
+  "book.forgero.guidebook.getting_started.intro.text1": "The learning curve of Forgero is pretty steep as you don't become a master blacksmith in a day. [#](FF0000)*Please follow this handbook closely and keep it on you at all times.*[#]()",
+  "book.forgero.guidebook.getting_started.intro.title": "World of Forgero",
+  "book.forgero.guidebook.getting_started.intro.title1": "Learning Curve",
   "book.forgero.guidebook.getting_started.crafting_your_first_tool.name": "Crafting Your First Tool!",
   "book.forgero.guidebook.getting_started.crafting_your_first_tool.description": "It's time to get started",
-  "book.forgero.guidebook.getting_started.crafting_your_first_tool.text" : "Okay lets get started! You want to create your first wooden tool. Just like in vanilla Forgero's wooden tools can be crafted with just some wood. No need for anything fancy (yet). On your right you see the crafting recipe for a basic wooden pickaxe.",
-  "book.forgero.guidebook.getting_started.crafting_your_first_tool.title": "Crafting Your First Tool",
-  "book.forgero.guidebook.getting_started.crafting_your_first_tool.text1" : "Forgero's tools always consist of (atleast) two different parts. A [#](1e0099)Handle[#]() and a [#](1e0099)Toolhead[#]() or a [#](1e0099)Swordblade[#]().",
-  "book.forgero.guidebook.getting_started.handle.name": "Crafting your first handle",
+  "book.forgero.guidebook.getting_started.crafting_your_first_tool.text" : "You want to create your first wooden tool. Just like in vanilla Forgero's wooden tools can be crafted with wood. No need for anything fancy (yet).",
+  "book.forgero.guidebook.getting_started.crafting_your_first_tool.title": "Your First Tool",
+  "book.forgero.guidebook.getting_started.crafting_your_first_tool.text1" : "Forgero's tools always consist of (atleast) two different parts. A [#](00F3FF)Handle[#]() and a [#](5100FF)Toolhead[#]() or a [#](5100FF)Swordblade[#]().",
+  "book.forgero.guidebook.getting_started.handle.name": "Crafting your first handle!",
   "book.forgero.guidebook.getting_started.handle.description": "Getting a handle on things",
-  "book.forgero.guidebook.getting_started.handle.text": "A [#](1e0099)Handle[#]() is used to give your toolhead a actual handle, instead of sticks. Handles can later on be upgraded and expanded upon by adding grip, reinforcements and pommels. For now a wooden handle is all we need.",
+  "book.forgero.guidebook.getting_started.handle.text": "A [#](00F3FF)Handle[#]() is needed to give your player something to hold on. Instead of bare handing a pickaxehead.",
   "book.forgero.guidebook.getting_started.handle.title": "Your First Handle",
-  "book.forgero.guidebook.getting_started.head.name": "Crafting your first toolhead",
+  "book.forgero.guidebook.getting_started.head.name": "Crafting your first toolhead!",
   "book.forgero.guidebook.getting_started.head.description": "Getting further a-head",
-  "book.forgero.guidebook.getting_started.head.text": "The type of [#](1e0099)Toolhead[#]() you craft decides what your tool is gonna be. Using a pickaxe head will naturally result in the tool being a pickaxe. Just like handles, these can also be upgraded and different variants can be found by exploring the world.",
+  "book.forgero.guidebook.getting_started.head.text": "The type of [#](5100FF)Toolhead[#]() you use decides which tool it is gonna be. So a axehead makes a axe, and a pickaxehead a pickaxe.",
   "book.forgero.guidebook.getting_started.head.title": "Your First Toolhead",
   "book.forgero.guidebook.getting_started.your_first_tool.name": "Your First Tool!",
   "book.forgero.guidebook.getting_started.your_first_tool.description": "Putting the pieces together",
   "book.forgero.guidebook.getting_started.your_first_tool.text": "Now we have the parts we needed to craft your first Forgero pickaxe! Hurry, Hurry now. Nobody likes wooden tools right? ",
   "book.forgero.guidebook.getting_started.your_first_tool.title": "Your First Tool",
   "book.forgero.guidebook.getting_started.your_first_tool.text1": "Here is a small reminder for the crafting recipe. Now you will never forget it! (right?)",
-  "book.forgero.guidebook.getting_started.schematics.name": "Schematics",
-  "book.forgero.guidebook.getting_started.schematics.description": "A different approach",
-  "book.forgero.guidebook.getting_started.schematics.text": "After wooden tools you will want to upgrade to stone tools. These tools can't be crafted like the wooden ones, but require [#](1e0099)Schematics[#](). The [#](1e0099)Base Schematics[#]() can be crafted with the previous made wooden parts using the [#](#eb9b34)[Disassembly Station](entry://schematics/disassembly_station)[#]().",
-  "book.forgero.guidebook.getting_started.schematics.title": "Schematics",
-  "book.forgero.guidebook.getting_started.schematic_variants.name": "Schematic Variants",
-  "book.forgero.guidebook.getting_started.schematic_variants.description": "But wait, there's more",
-  "book.forgero.guidebook.getting_started.schematic_variants.text": "The [#](1e0099)Base Schematics[#]() that you can craft yourself replicate minecraft's vanilla tools. These tools can be upgraded later on. As the name suggest [#](1e0099)Base Schematics[#]() don't give your tools any multipliers or special abilities.",
-  "book.forgero.guidebook.getting_started.schematic_variants.title": "Base Schematics",
-  "book.forgero.guidebook.getting_started.schematic_variants.text1": "Schematics exist in a lot of different variants. Higher tier schematics can be found by looting dungeons and villages. Some only boost stats of their vanilla counterpart and some give unique functionality like vein mining. Next to [#](1e0099)Base Schematics[#]() you have [#](7f1734)Refined/Extended Schematics[#]() and [#](097E7B)Mastercrafted Schematics[#]()",
-  "book.forgero.guidebook.getting_started.schematic_variants.title1": "Different Schematics",
-  "book.forgero.guidebook.getting_started.using_your_schematics.name": "Using Your Schematics",
-  "book.forgero.guidebook.getting_started.using_your_schematics.description": "Time for an upgrade",
-  "book.forgero.guidebook.getting_started.using_your_schematics.text": "If you've followed the process until now you should have crafted some [#](1e0099)Base Schematics[#](). Now all you need is some stone or another material of your choosing, and a schematic to make your new parts!",
-  "book.forgero.guidebook.getting_started.using_your_schematics.title": "Using Your Schematics",
-  "book.forgero.guidebook.getting_started.refined_schematics.name": "Refined Schematics",
-  "book.forgero.guidebook.getting_started.refined_schematics.description": "Everything on Refined Schematics!",
-  "book.forgero.guidebook.getting_started.refined_schematics.title": "LOREM IPSUM",
-  "book.forgero.guidebook.getting_started.refined_schematics.text": "DOLOR SIT AMET",
-  "book.forgero.guidebook.getting_started.extended_schematics.name": "Extended Schematics",
-  "book.forgero.guidebook.getting_started.extended_schematics.description": "Everything on Extended Schematics!",
-  "book.forgero.guidebook.getting_started.extended_schematics.title": "UT ENIM AD MINIM VENIAM",
-  "book.forgero.guidebook.getting_started.extended_schematics.text": "QUIS NOSTRUD EXERCITATION ULLAMCO LABORIS NISI UT ALIQUIP EX EA COMMODO CONSEQUAT",
-  "book.forgero.guidebook.getting_started.mastercrafted_schematics.name": "Mastercrafted Schematics",
-  "book.forgero.guidebook.getting_started.mastercrafted_schematics.description": "Everything on Mastercrafted Schematics!",
-  "book.forgero.guidebook.getting_started.mastercrafted_schematics.title": "CONSECTETUR ADIPISCING ELIT",
-  "book.forgero.guidebook.getting_started.mastercrafted_schematics.text": "SED DO EIUSMOD TEMPOR INCIDIDUNT UT LABORE ET DOLORE MAGNA ALIQUA",
-  "book.forgero.guidebook.getting_started.disassembly_station.name": "Using the Disassembly Station",
-  "book.forgero.guidebook.getting_started.disassembly_station.description": "Breaking it down",
-  "book.forgero.guidebook.getting_started.disassembly_station.text": "The Disassembly Station makes it possible to disassemble your tools. This is pretty handy for getting back used materials/parts when upgrading or changing around your tools. So no need discard old tools!",
-  "book.forgero.guidebook.getting_started.disassembly_station.title": "The Disassembly Station",
-  "book.forgero.guidebook.getting_started.disassembly_station.text1": "The recipe for the disassembly station only requires some stone and a crafting bench. ",
-  "book.forgero.guidebook.getting_started.disassembly_station.title2": "How to use it",
-  "book.forgero.guidebook.getting_started.disassembly_station.text2": "How it works is pretty straight forward. If you put in a full [#](1e0099)Tool[#]() you get back the parts its made out of. When inserting only a [#](1e0099)Tool part[#]() you get back some of the materials used crafting it.",
-  "book.forgero.guidebook.getting_started.disassembly_station.text3": "There it is :)",
-  "book.forgero.guidebook.getting_started.shortcut.name": "Upgrading Your Tool Further!",
-  "book.forgero.guidebook.getting_started.shortcut.description": "The basics on Tool Slots and more!",
-  "book.forgero.guidebook.category.upgrading": "Upgrading",
+  "book.forgero.guidebook.getting_started.shortcut.name": "Onto Schematics!",
+  "book.forgero.guidebook.getting_started.shortcut.description": "Stone age & Beyond",
+  "book.forgero.guidebook.category.schematics.name": "Schematics & Co",
+  "book.forgero.guidebook.schematics.back_to_crafting.name": "Back To The Basics!",
+  "book.forgero.guidebook.schematics.back_to_crafting.description": "Already forgot again?",
+  "book.forgero.guidebook.schematics.schematics.name": "Schematics",
+  "book.forgero.guidebook.schematics.schematics.description": "A different approach",
+  "book.forgero.guidebook.schematics.schematics.text": "Getting stone tools is a bit different than wooden ones. You will need [#](78FF00)schematics[#](). Luckily the base ones can be crafted pretty easily. You can create new wooden parts and use these or use the [#](7C00FF)[Disassembly Station](entry://schematics/disassembly_station)[#]().",
+  "book.forgero.guidebook.schematics.schematics.title": "Schematics",
+  "book.forgero.guidebook.schematics.using_your_schematics.name": "Using Your Schematics",
+  "book.forgero.guidebook.schematics.using_your_schematics.description": "Time for an upgrade",
+  "book.forgero.guidebook.schematics.using_your_schematics.title": "Using Them",
+  "book.forgero.guidebook.schematics.using_your_schematics.text": "If u followed the process until now you should have some [#](78FF00)schematics[#]().\n\\\n\\\nOnly thing left is to find the material you wanna use!\n",
+  "book.forgero.guidebook.schematics.disassembly_station.name": "Using the Disassembly Station",
+  "book.forgero.guidebook.schematics.disassembly_station.description": "Breaking it down",
+  "book.forgero.guidebook.schematics.disassembly_station.title": "The Disassembly Station",
+  "book.forgero.guidebook.schematics.disassembly_station.text": "The [#](7C00FF)Disassembly Station[#]() lets you disassemble your [#](000CFF)tools[#](). This makes it possible to get back used materials or parts. No need to discard those old [#](000CFF)tools[#]()!",
+  "book.forgero.guidebook.schematics.disassembly_station.title2": "Actually using it",
+  "book.forgero.guidebook.schematics.disassembly_station.text2": "To use it you put in a [#](000CFF)tool[#]() on the left side. On the right side it will show what you get back.\n\\\n\\\n[#](FF0000)*Keep in mind that not all the materials are given back.*[#]()\n",
+  "book.forgero.guidebook.schematics.schematic_variants.name": "Different Schematics",
+  "book.forgero.guidebook.schematics.schematic_variants.description": "But wait, there's more",
+  "book.forgero.guidebook.schematics.schematic_variants.text": "The [#](78FF00)base schematics[#]() that you can craft yourself replicate minecraft's vanilla tools.\n\\\n\\\nAs the name suggest [#](78FF00)base schematics[#]() don't give your tools more stats or more slots\n",
+  "book.forgero.guidebook.schematics.schematic_variants.title": "Base Schematics",
+  "book.forgero.guidebook.schematics.schematic_variants.text1": "There are more [#](78FF00)schematics[#]() than just the base one. Higher tier [#](78FF00)schematics[#]() have stat boosts or special abilities like vein mining. These [#](78FF00)schematics[#]() cannot be crafted.",
+  "book.forgero.guidebook.schematics.schematic_variants.title1": "There Are More",
+  "book.forgero.guidebook.schematics.refined_schematics.name": "Refined Schematics",
+  "book.forgero.guidebook.schematics.refined_schematics.description": "Better Tools!",
+  "book.forgero.guidebook.schematics.refined_schematics.title": "Refined Schematics",
+  "book.forgero.guidebook.schematics.refined_schematics.text": "[#](78FF00)Refined schematics[#]() are a upgrade over the normal [#](78FF00)schematics[#](). These [#](78FF00)schematics[#]() don't have special abilities but are just straight up stat upgrades. ",
+  "book.forgero.guidebook.schematics.refined_schematics.title1": "How to get them",
+  "book.forgero.guidebook.schematics.refined_schematics.text1": "You can find these [#](78FF00)schematics[#]() by exploring the world. Destroy villages and villagers, free bastions, kill pillagers or by being boring a trading your way up.",
+  "book.forgero.guidebook.schematics.extended_schematics.name": "Extended Schematics",
+  "book.forgero.guidebook.schematics.extended_schematics.description": "Extended = Unique",
+  "book.forgero.guidebook.schematics.extended_schematics.title": "Extended Schematics",
+  "book.forgero.guidebook.schematics.extended_schematics.text": "[#](78FF00)Extended schematics[#]() push the boundaries of fantasy and functionality. [#](000CFF)Tools[#]() created with these [#](78FF00)schematics[#]() have abilities that are often explained in the tooltip. ",
+  "book.forgero.guidebook.schematics.extended_schematics.title1": "Examples",
+  "book.forgero.guidebook.schematics.extended_schematics.text1": "Examples of these abilties are vein mining, throwing, getting boosts during nighttime or by being in another dimension etc. The others are for you to discover.",
+  "book.forgero.guidebook.schematics.mastercrafted_schematics.name": "Mastercrafted Schematics",
+  "book.forgero.guidebook.schematics.mastercrafted_schematics.description": "Even Better Better Tools!",
+  "book.forgero.guidebook.schematics.mastercrafted_schematics.title": "Mastercrafted Schematics",
+  "book.forgero.guidebook.schematics.mastercrafted_schematics.text": "[#](78FF00)Mastercrafted schematics[#]() are a upgrade over the normal and refined [#](78FF00)schematics[#](). Just like the refined ones these are a straight up stat boost, but also feature more slots.",
+  "book.forgero.guidebook.schematics.mastercrafted_schematics.title1": "Good luck searching",
+  "book.forgero.guidebook.schematics.mastercrafted_schematics.text1": "Just like all the other [#](78FF00)schematics[#]() you can find these by exploring the world. These [#](78FF00)schematics[#]() are the most rare of them all. Some blacksmiths never even see these in their lifetime.",
+  "book.forgero.guidebook.schematics.shortcut.name": "Customization is key",
+  "book.forgero.guidebook.schematics.shortcut.description": "Finally I can dye my tools pink!",
+  "book.forgero.guidebook.category.upgrading.name": "Upgrading",
   "book.forgero.guidebook.upgrading.upgrade_station.name": "Taking Your Tools To The Next Level",
   "book.forgero.guidebook.upgrading.upgrade_station.description": "The Basics On The Upgrade Station!",
   "book.forgero.guidebook.upgrading.upgrade_station.text": "",
@@ -297,8 +309,5 @@
   "book.forgero.guidebook.upgrading.pommel.name": "Pommels",
   "book.forgero.guidebook.upgrading.pommel.description": "pommel description here",
   "book.forgero.guidebook.upgrading.pommel.text": "",
-  "book.forgero.guidebook.upgrading.pommel.title": "",
-  "book.forgero.guidebook.upgrading.back_to_crafting.name": "Back To Crafting",
-  "book.forgero.guidebook.upgrading.back_to_crafting.description": "Refresh on the basics",
-  "book.forgero.guidebook.category.schematics": "Schematics & Co"
+  "book.forgero.guidebook.upgrading.pommel.title": ""
 }
